--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3005
 DB_CONNECT= mongodb+srv://mean_user_curso:MW9DLyuofE7kFV6Z@cluster0.gmhcs.mongodb.net/hospitalCurso
-
+JWT_SECRET = gakdo2ksl455kg@.swer
